crates/wac-parser/tests/resolution/fail/mismatched-func-scalar-result/foo/bar.wat
(component
  (instance (import "x")
    (export "f" (func (result u8)))
  )
)
